# ai-dnd-demo

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENT-EXTENSION-PLAN.md  AGENTS.md  ANALYSIS_REPORT.md  CLAUDE-REVIEW.md  CLAUDE.md  FRONTEND_ISSUES.md  FRONTEND_ISSUES_PROGRESS.md  FRONTEND_REVIEW.md  GEMINI-REVIEW.md  IDEAS.md  INVESTIGATION.md  ISSUE-LOAD-LEVEL.md  PLAN-REMOVE-QUESTS.md  PLAN.md  PREPARATION-PLAN.md  PROGRESS.md  README.md  REFACTORING_PROMPT.md  REPORT-ISSUES.md  REPORT.md  REVIEW-CLAUDE.md  REVIEW-GPT.md  REVIEW.md  SOLID_TOOL_EXECUTION_SOLUTION.md  TOOL_EXECUTION_ANALYSIS.md  TYPE-SAFETY-PLAN.md  pyproject.toml  requirements.txt
app/: __init__.py  config.py  container.py  dependencies.py  main.py
data/: alignments.json  backgrounds.json  classes.json  conditions.json  damage_types.json  feats.json  features.json  items.json  languages.json  magic_items.json  magic_schools.json  metadata.json  monsters.json  races.json  skills.json  spells.json  subclasses.json  subraces.json  traits.json  weapon_properties.json
docs/: FUTURE-AGENTS.md  NPC-PARTY-PLAN.md  PROGRESS.md  context_building.md  frontend-refactor-plan.md  migration-progress.md  orchestration.md  pydantic-ai-refactor-snippets.md
frontend/: app.js  index.html  style.css
frontend-v2/: .gitignore  NEXT_STEPS.md  PROGRESS.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.test.json  vite.config.ts  vitest.config.ts
scripts/: content_pack_utils.py  generate_srd_schemas.py  ingest_srd_to_internal.py  migrate_alignments_from_srd.py  migrate_backgrounds_from_srd.py  migrate_classes_from_srd.py  migrate_conditions_from_srd.py  migrate_damage_types_from_srd.py  migrate_equipment_from_srd.py  migrate_feats_from_srd.py  migrate_features_from_srd.py  migrate_languages_from_srd.py  migrate_magic_items_from_srd.py  migrate_magic_schools_from_srd.py  migrate_monsters_from_srd.py  migrate_races_from_srd.py  (+6 more)
tests/: README.md
(+618 files in other folders)
